--- a/.github/workflow/check-docker-compose.yaml
+++ b/.github/workflow/check-docker-compose.yaml
@@ -1,8 +1,9 @@
 name: check-docker-task
 on:
   push:
+    branches: [ "main", "develop" ]
   pull_request:
-    branches: "main"
+    branches: [ "main", "develop" ]
   workflow_dispatch:
 
 
