--- a/.github/workflows/check-docker-compose.yaml
+++ b/.github/workflows/check-docker-compose.yaml
@@ -14,3 +14,6 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@HEAD
       - run: docker compose build
+      - run: docker-compose up
+      - run: sleep 30
+      - run: docker-compose down
