--- a/.github/workflows/check-docker-compose.yaml
+++ b/.github/workflows/check-docker-compose.yaml
@@ -8,7 +8,7 @@ on:
 
 
 jobs:
-  Build-Docker:
+  Check-Docker-Compose:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
